[B]Retrospect v5.0.7 - Changelog - 2019-10-09[/B]

Updates for NPO that completely broke and added MTV and National Geographic for Sweden.

[B]Framework related[/B]
* Fixed: possible issue with missing content-type that cause a byte object to return (See #1239)

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: UR Play site changes broke the channel (Fixes #1237)